add equipment2 paragrph

--- a/gym.html
+++ b/gym.html
@@ -56,9 +56,19 @@
 			<h2> 1. Act trainer</h2>
 			<img src="image/arc.png" width="150px">
 			<p>A popular alternative motion cardio unit that offers extreme efficiency and effectiveness backed by exercise science. It's really three machines in one.At lower incline levels, it glides like a cross-country skier. In the middle, it strides like an elliptical. At higher levels, it's a climber.</p>
-			<h2>FOR EXERCISERS OF ALL FITNESS LEVELS</h2>
+			<!-- <h2>FOR EXERCISERS OF ALL FITNESS LEVELS</h2> -->
 			<p>Life Fitness Arc Trainers are fixtures in clubs and athletic facilities around the world. The high power capacity of the Arc makes it ideal for training lower body strength in exercisers who cannot perform more traditional movements. And for those looking to lose weight, research has shown that the Arc is capable of burning 9-16% more calories than competitive machines.</p>
 		</div>
+	</div>
+
+	<div class="container-4">
+		<div class="equipment2">
+			<h2>2. Elliptical Trainer</h2>
+			<img src="image/ellip.png" width="150px">
+			<p>An elliptical trainer or cross-trainer is a stationary exercise machine used to stair climb, walk, or run without causing excessive pressure to the joints, hence decreasing the risk of impact injuries. For this reason, people with some injuries can use an elliptical to stay fit, as the low impact affects them little.</p>
+			<p>What makes an elliptical trainer special is the combined upper and lower body workout. That is why many refer to an elliptical as a cross-trainer.  Before even stepping onto the machine, set an intention for the workout. “Ask yourself what you want to achieve that day,  The elliptical machine is a versatile cardio machine that targets a variety of muscles. Find out what muscles the elliptical targets.</p>
+		</div>
+
 	</div>
 
 	<footer>
