update equipment2 description

--- a/gym.html
+++ b/gym.html
@@ -40,7 +40,7 @@
 			<h1>stay active & healthy</h1>
 			<p>At Planet Fitness, we know that staying active is more important now than ever, and is essential to maintaining good health.  
 				Want to keep moving while you're at home? We have the workouts for you!  On the Planet Fitness app you can access our exclusive training series, powered by iFit.  You'll find six fun and motivating series, for beginner through intermediate.  Led by some of the best trainers in the industry, you'll get exciting cardio, strength and dumbbell workouts - for free!  Download the app and start sweating today.
-				Check out Fit Facts from Planet Fitness and learn how we are helping you stay active in and out of our clubs.  Planet Fitness is ready to keep you motivated and movin'!</p> 
+				Check out fit Fit Facts from Planet Fitness and learn how we are helping you stay active in and out of our clubs.  Planet Fitness is ready to keep you motivated and movin'!</p> 
 			<p>We want our members to gym confidently in a safe environment, therefore, we’ve enhanced our safety and cleaning policies. Beginning August 1st, masks are required to be worn while inside our clubs – including members and PF Team Members.
 			So don’t forget to mask up!  But if you do forget, no worries. Just visit the front desk. Now more than ever it’s important to stay active. So we’re streaming trainer-led workouts from in-club that anyone can do, from anywhere! Tune in Monday through Friday on Facebook or YouTube. </p>
 			<a href="#">read more</a>
